# AI_agentic_reasoning

./: .env.example  README.md
api/: README.md  main.py  pyproject.toml  requirements.txt
api/app/agents/: evaluator.py  report.py  search.py  synthesis.py
api/app/api/: app.py  auth.py  routes.py  webhook.py
api/app/core/: config.py  jobs.py  llm.py  pipeline.py  store.py
api/app/models/: api.py  state.py
api/output/2014fa59c2df/: AI_risks_in_higher_education_report.md  AI_risks_in_higher_education_state.json
api/tests/: test.py  test_agents.py  test_api.py  test_models.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/job/[id]/: page.tsx
frontend/src/components/: MermaidDiagram.tsx  ReasoningPanel.tsx  ReportView.tsx  ScoreCard.tsx  StatusBadge.tsx
frontend/src/hooks/: useJobPoller.ts
frontend/src/lib/: api.ts
ressources/notebook/: Backend_Walkthrough.ipynb  Multi_Agent_Research_System.ipynb
ressources/report/: report.md
ressources/report/latex/: report.tex
ressources/slides/: slides.tex
